kubernetes/monitoring/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: code-at-customer-issuer
spec:
  tls:
    - hosts:
        - grafana.shukawam.com
        - prometheus.shukawam.com
        - kiali.shukawam.com
        - jaeger.shukawam.com
      secretName: code-at-customer-certificate
  rules:
    - host: grafana.shukawam.com
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 3000
            path: /
            pathType: Prefix
    - host: prometheus.shukawam.com
      http:
        paths:
          - backend:
              service:
                name: prometheus
                port:
                  number: 9090
            path: /
            pathType: Prefix
    - host: kiali.shukawam.com
      http:
        paths:
          - backend:
              service:
                name: kiali
                port:
                  number: 20001
            path: /
            pathType: Prefix
          - backend:
              service:
                name: kiali
                port:
                  number: 9090
            path: /
            pathType: Prefix
    - host: jaeger.shukawam.com
      http:
        paths:
          - backend:
              service:
                name: tracing
                port:
                  number: 80
            path: /
            pathType: Prefix
